--- a/app/src/main/res/layout/activity_game_main.xml
+++ b/app/src/main/res/layout/activity_game_main.xml
@@ -52,7 +52,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:text="MOVE"
+                android:text="@string/move_button"
                 android:onClick="onMove"/>
             <Button
                 android:id="@+id/save_button"
@@ -63,7 +63,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:text="SAVE"
+                android:text="@string/save_button"
                 android:onClick="onSave"/>
             <Button
                 android:id="@+id/quit_button"
@@ -74,7 +74,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:text="QUIT"
+                android:text="@string/quit_button"
                 android:onClick="onQuit"/>
         </LinearLayout>
 
