--- a/app/src/main/res/layout/activity_view_cg_menu.xml
+++ b/app/src/main/res/layout/activity_view_cg_menu.xml
@@ -110,7 +110,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.1"
+            android:layout_weight="0.075"
             android:orientation="horizontal"
             android:weightSum="1">
             <TextView
@@ -122,7 +122,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.3"
-                android:text="BACK"
+                android:text="@string/back_button"
                 android:onClick="onBack"/>
         </LinearLayout>
     </LinearLayout>
